# ommatidia

./: .gitignore  README.md  openapi.yaml
detectors/: README.md
detectors/BORE/: CMakeLists.txt  Dockerfile  README.md
detectors/BORE/src/: algo.h  main.cpp
detectors/CPRD/: CMakeLists.txt  Dockerfile  README.md
detectors/CPRD/src/: PupilDetectorHaar.cpp  PupilDetectorHaar.h  main.cpp  utils.h
detectors/CPRD/src/Swirski2012/: PupilTracker.cpp  cvx.h
detectors/EdgeGuided/: Dockerfile  README.md  requirements.txt
detectors/EdgeGuided/src/: detector.py
detectors/EdgeGuided/src/implementation/: bdcn_new.py  calc_box_iou.py  evaluate.py  helperfunctions.py  loss.py  pytorchtools.py  utils.py  vgg16_c.py
detectors/EdgeGuided/src/implementation/models/: RITnet_v2.py  deepvog_pytorch.py
detectors/ElSe/: CMakeLists.txt  Dockerfile  README.md
detectors/ElSe/src/: ElSe.cpp  ElSe.hpp  main.cpp
detectors/EllSeg/: Dockerfile  README.md  env.yaml
detectors/EllSeg/src/: detector.py
detectors/EllSeg/src/implementation/: evaluate_ellseg.py  loss.py  modelSummary.py  utils.py
detectors/EllSeg/src/implementation/models/: RITnet_v1.py  RITnet_v2.py  RITnet_v3.py  RITnet_v4.py  RITnet_v5.py  RITnet_v6.py  RITnet_v7.py  deepvog_pytorch.py
detectors/ExCuSe/: CMakeLists.txt  Dockerfile  README.md
detectors/ExCuSe/src/: ExCuSe.cpp  ExCuSe.hpp  main.cpp
detectors/PuRe/: CMakeLists.txt  Dockerfile  README.md
detectors/PuRe/src/: PuRe.cpp  PuRe.hpp  main.cpp
detectors/PupilEllipseFitError/: Dockerfile  README.md  env.yaml  requirements.txt
detectors/PupilEllipseFitError/src/: detector.py
detectors/PupilLabs/: Dockerfile  README.md  env.yaml  requirements_pip.txt
detectors/PupilLabs/src/: detector.py
detectors/PupilLocator/: Dockerfile  README.md  env.yaml  requirements_pip.txt
detectors/PupilLocator/src/: detector.py
detectors/PupilLocator/src/implementation/: inferno.py  logger.py  models.py  utils.py
detectors/Starburst/: CMakeLists.txt  Dockerfile  README.md
detectors/Starburst/src/: Starburst.cpp  Starburst.hpp  main.cpp
detectors/Swirski/: CMakeLists.txt  Dockerfile  README.md
detectors/Swirski/src/: Swirski.cpp  Swirski.hpp  main.cpp
detectors/Timms/: CMakeLists.txt  Dockerfile  README.md
detectors/Timms/src/: main.cpp  timm.cpp  timm.h  timm_two_stage.h
src/: README.md  base_builder.py
src/cpp/: CMakeLists.txt  Dockerfile  README.md
src/cpp/include/: detection.hpp  detection_params.hpp  error.hpp  image_size.hpp  meta_data.hpp  server.hpp  types.hpp
src/cpp/include/predictions/: ellipse.hpp  prediction.hpp  pupil_center.hpp  radian.hpp
src/cpp/src/: detection_params.cpp  error.cpp  image_size.cpp  meta_data.cpp  server.cpp
src/cpp/src/predictions/: ellipse.cpp  pupil_center.cpp
src/cpp/tests/: main.cpp
src/evaluation/: Cargo.toml  example.toml
src/evaluation/ommatidia/: Cargo.toml
src/evaluation/ommatidia/src/: connection.rs  detector.rs  engine.rs  errors.rs  estimate.rs  lib.rs  meta_data.rs  util.rs
src/evaluation/ommatidia/src/dataset/: error.rs  identifier.rs  mod.rs  sample.rs
src/evaluation/ommatidia/src/detector/: config.rs  connection.rs  creation_error.rs  detection.rs  detection_error.rs  detectors.rs  error.rs  mod.rs  name.rs
src/evaluation/ommatidia/src/engine/: config.rs  engines.rs  error.rs  mod.rs  readable_file_path.rs  remote_config.rs
src/evaluation/ommatidia/src/estimate/: estimates.rs  mod.rs
src/evaluation/ommatidia/src/files/: entry.rs  error.rs  mod.rs  sample.rs
src/evaluation/src/: config.rs  error_printer.rs  main.rs
src/python/: .pylintrc  Dockerfile  README.md  builder.py
src/python/pupil_detector/: __init__.py  main.py
src/python/pupil_detector/apis/: default_api.py  detections_api.py
src/python/pupil_detector/models/: ellipse.py  mask.py  meta_data.py  point.py  sample.py
src/python/tests/: conftest.py  test_default_api.py  test_detections_api.py
src/testing/: .pylintrc  README.md
src/testing/evaluation/: evaluation.ipynb
src/testing/testing/: __main__.py  docker.py  test_runner.py
src/testing/testing/tests/: __init__.py  default.py  detector.py
src/testing/testing/tests/res/: __init__.py
