[package]
name = "ommatidia"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = { version = "0.12", features = ["ssl"] }
portpicker = "0.1"
serde = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
hyper = { version = "0.14", features = ["client", "http1"] }
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0"
